price also change

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="d-flex">
           <a href="#" class="btn-get-started scrollto payerMaformationId">
             Payez la formation à &nbsp;
-            <strong>4566 FCFA</strong>
+            <strong>4 586 FCFA</strong>
           </a>
           <a
             href="https://drive.google.com/file/d/1SQrcByb-ONRkTRmUeqC_DgjD6fi_HUL_/preview"
@@ -121,7 +121,7 @@
                   class="getstarted scrollto payerMaformationId"
                   style="cursor: pointer"
                   >Payez l'accès à la formation à &nbsp;
-                  <strong>4566 FCFA</strong>
+                  <strong>4 586 FCFA</strong>
                 </a>
               </li>
             </ul>
@@ -361,7 +361,7 @@
                     class="getstarted scrollto payerMaformationId"
                     style="cursor: pointer"
                     >Payez l'accès à la formation à &nbsp;
-                    <strong>4566 FCFA</strong>
+                    <strong>4 586 FCFA</strong>
                   </a>
                 </li>
               </ul>
@@ -492,7 +492,7 @@
                     class="getstarted scrollto payerMaformationId"
                     style="cursor: pointer"
                     >Payez l'accès à la formation à &nbsp;
-                    <strong>4566 FCFA</strong>
+                    <strong>4 586 FCFA</strong>
                   </a>
                 </li>
               </ul>
