--- a/formation.html
+++ b/formation.html
@@ -47,10 +47,10 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <script>
-    const UserConnectIdToBuy = localStorage.getItem("storageName");
-    if(!UserConnectIdToBuy){
-			window.location.href = "index.html"
-		}
+    //const UserConnectIdToBuy = localStorage.getItem("storageName");
+    //if(!UserConnectIdToBuy){
+		//	window.location.href = "index.html"
+		//}
   </script>
   </head>
 
